feat(core): implementar multi-catch polimórfico, refatorar AST para mutações complexas e blindar interpretador
1. Tratamento de Erros Avançado (Try/Catch/Throw/Finally):
- Implementa suporte a múltiplos blocos `catch` tipados com resolução polimórfica (usando `isSubclassOf`), permitindo capturar heranças de exceções (ex: `catch(e: NumberError)`).
- Adiciona o mecanismo de "Injeção Nativa POO", que converte e embrulha automaticamente falhas críticas do motor (`RuntimeError`) em instâncias de classes XPL (se `declare Error` existir).
- Garante o isolamento de escopo para variáveis de erro e a execução imutável do bloco `finally`.

2. Evolução da Árvore Sintática (AST) e Parser:
- Refatora os nós `Update` (`++`, `--`) e `CompoundAssign` (`+=`, `*=`) para aceitarem expressões como alvo (`Expr target`), permitindo mutações diretas em propriedades (`Objeto.prop++`) e arrays (`arr[0] += 5`).
- Substitui a chamada `match(TokenType.FUN)` por `check()` no Parser para evitar o consumo prematuro de tokens, corrigindo a declaração de callbacks e Higher-Order Functions (`reduce`, `forEach`).

3. Blindagem de Execução e Correção de Tipos (Interpreter):
- Ajusta a precedência nos operadores `+` e `+=` (`visitBinaryExpr` e `visitCompoundAssignExpr`) para dar prioridade absoluta à concatenação de Strings sobre a adição matemática.
- Elimina o bug de conversão implícita do operador ternário do Java no `visitForInRangeStmt`, preservando números inteiros como `long` e evitando casts silenciosos para `double`.
- Adiciona inferência inteligente de direção nos Range Loops (atribui automaticamente um jump de `-1.0` em loops decrescentes sem salto explícito).